@@ -55,7 +55,7 @@ public class GeneralOptionPane extends AbstractOptionPane
 	//}}}
 
 	//{{{ Private members
-	private JComboBox lineSeparator;
+
 	private JComboBox checkModStatus;
 	private JComboBox checkModStatusUpon;
 	private JTextField recentFiles;
@@ -79,23 +79,6 @@ public class GeneralOptionPane extends AbstractOptionPane
 	@Override
 	protected void _init()
 	{
-
-		/* Line separator */
-		String[] lineSeps = { jEdit.getProperty("lineSep.unix"),
-			jEdit.getProperty("lineSep.windows"),
-			jEdit.getProperty("lineSep.mac") };
-		lineSeparator = new JComboBox(lineSeps);
-		String lineSep = jEdit.getProperty("buffer."+ JEditBuffer.LINESEP,
-			System.getProperty("line.separator"));
-		if("\n".equals(lineSep))
-			lineSeparator.setSelectedIndex(0);
-		else if("\r\n".equals(lineSep))
-			lineSeparator.setSelectedIndex(1);
-		else if("\r".equals(lineSep))
-			lineSeparator.setSelectedIndex(2);
-		addComponent(jEdit.getProperty("options.general.lineSeparator"),
-			lineSeparator);
-
 
 		/* Check mod status */
 		String[] modCheckOptions = {
@@ -209,20 +192,6 @@ public class GeneralOptionPane extends AbstractOptionPane
 	protected void _save()
 	{
 
-		String lineSep = null;
-		switch(lineSeparator.getSelectedIndex())
-		{
-		case 0:
-			lineSep = "\n";
-			break;
-		case 1:
-			lineSep = "\r\n";
-			break;
-		case 2:
-			lineSep = "\r";
-			break;
-		}
-		jEdit.setProperty("buffer."+ JEditBuffer.LINESEP,lineSep);
 		switch(checkModStatus.getSelectedIndex())
 		{
 		case 0:
